# Projeto_final_lp1_aed1_2223

./: CMakeLists.txt  README.md  funcoes_aulas.c  funcoes_aulas.h  funcoes_auxiliares.c  funcoes_auxiliares.h  main.c  projeto_lp1_aed1_chars.c  projeto_lp1_aed1_chars.h  projeto_lp1_aed1_ints.c  projeto_lp1_aed1_ints.h
data/: textints.txt
