cmake_minimum_required(VERSION 3.21)
project(projeto_final_lp1_22_23 C)

set(CMAKE_C_STANDARD 99)

add_executable(projeto_final_lp1_22_23 main.c projeto_lp1_aed1_chars.c projeto_lp1_aed1_chars.h projeto_lp1_aed1_ints.c projeto_lp1_aed1_ints.h funcoes_aulas.c funcoes_aulas.h funcoes_auxiliares.c funcoes_auxiliares.h)
